Prep for release

--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
   "name": "Michromeformats",
   "version": "0.3.0",
-  "description": "Displays any microformats on the page. Supports hCard, hCalendar, hReview, hRecipe and geo. hCard can be exported to Google Contacts and hCalendar can be exported to Google Calendar",
+  "description": "Displays any microformats on the page. Supports hCard, hCalendar, hReview, hRecipe and geo. hCard can be downloaded or exported to Google Contacts. hCalendars will support exporting to Google Calendar soon. ",
   "page_action": {
     "default_icon": "images/microformats-logo-16.png",
-    "default_title" : "Click to view the microformats...",
+    "default_title" : "Click to view the microformats…",
     "popup": "popup.html"
   },
   "content_scripts": [ {
